Added built-in server to elda-standalone so development doesn't rely on sysdeo or wtp or whatever. Adjusted web.xml and velocity-using config to match.

--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,18 @@
         </param-value>
 	</context-param>
   
+  <servlet>
+  	<servlet-name>loader-init</servlet-name>
+  	<servlet-class>com.epimorphics.lda.routing.Loader</servlet-class>
+  	<init-param>
+		<param-name>com.epimorphics.api.initialSpecFile</param-name>
+        <param-value>specs/system-test-A.ttl</param-value>
+  	</init-param>
+    
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  
+<!--
     <filter>
         <filter-name>Jersey Web Application</filter-name>
         <filter-class>com.sun.jersey.spi.container.servlet.ServletContainer</filter-class>
@@ -39,14 +51,40 @@
              <param-value>com.sun.jersey.api.container.filter.PostReplaceFilter</param-value>
          </init-param>
   </filter>
+-->
+
+  <servlet>
+    <servlet-name>jersey</servlet-name>
+    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+    
+    <init-param>
+    	<param-name>com.sun.jersey.config.property.packages</param-name>
+    	<param-value>com.epimorphics.lda.restlets</param-value>
+    </init-param>
+
+    <load-on-startup>1</load-on-startup>
+  </servlet>
 
   <!-- ==================================================================== -->
 
+<!--
   <filter-mapping>
     <filter-name>Jersey Web Application</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+-->
+
+  <servlet-mapping>
+    <servlet-name>jersey</servlet-name>
+    <url-pattern>/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
   
+    <servlet-name>default</servlet-name>
+    <url-pattern>/lda-assets/*</url-pattern>
+  </servlet-mapping>
+
+
   <!-- ==================================================================== -->
   
   <listener>
