--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -16,6 +16,14 @@
 
   <dependencies>
 
+
+      <dependency>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty</artifactId>
+        <version>6.1.16</version>
+      </dependency>
+
+
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
       <artifactId>elda-lda</artifactId>
