--- a/elda-assets/pom.xml
+++ b/elda-assets/pom.xml
@@ -35,7 +35,7 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.6</version>
           <configuration>
-              <skip>true</skip>
+              <skip>false</skip>
           </configuration>
         </plugin>
     </plugins>
