--- a/elda-bundled/pom.xml
+++ b/elda-bundled/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.26</version>
+    <version>1.2.27-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-bundled</artifactId>
   <packaging>war</packaging>
   <name>elda-bundled</name>
-  <version>1.2.26</version>
+  <version>1.2.27-SNAPSHOT</version>
   <description>single WAR with assets and external configuration</description>
 
   <dependencies>
