--- a/elda-bundled/pom.xml
+++ b/elda-bundled/pom.xml
@@ -52,8 +52,9 @@
 		<plugin>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>maven-jetty-plugin</artifactId>
+	    		<version>6.1.25</version>
 			<configuration>
-				<contextPath>/elda-bundled</contextPath>
+			<contextPath>/elda-bundled</contextPath>
 			</configuration>
 		</plugin>
 
