--- a/elda-common/pom.xml
+++ b/elda-common/pom.xml
@@ -44,6 +44,7 @@
 		<plugin>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>maven-jetty-plugin</artifactId>
+	    		<version>6.1.25</version>
 			<configuration>
 				<contextPath>/elda-common</contextPath>
 			</configuration>
