--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -87,7 +87,7 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.6</version>
           <configuration>
-              <skip>true</skip>
+              <skip>false</skip>
           </configuration>
         </plugin>
     </plugins>
