[maven-release-plugin] prepare for next development iteration

--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.31</version>
+    <version>1.2.32-SNAPSHOT</version>
   </parent>
 
 	<groupId>com.epimorphics.lda</groupId> 
   <artifactId>elda-lda</artifactId>
   <name>elda-lda</name>  
-  <version>1.2.31</version>
+  <version>1.2.32-SNAPSHOT</version>
 
   <url>http://maven.apache.org</url>
 
