--- a/elda-common/pom.xml
+++ b/elda-common/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.31</version>
+    <version>1.2.32-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-common</artifactId>
   <packaging>war</packaging>
   <name>elda-common</name>
-  <version>1.2.31</version>
+  <version>1.2.32-SNAPSHOT</version>
   <description>single WAR with external configuration</description>
 
   <dependencies>
