--- a/elda-common/pom.xml
+++ b/elda-common/pom.xml
@@ -15,6 +15,22 @@
   <description>single WAR with external configuration</description>
 
   <dependencies>
+
+	                  <dependency>
+                        <groupId>xalan</groupId>
+                        <artifactId>xalan</artifactId>
+                        <version>2.7.1</version>
+                        <type>jar</type>
+                        <scope>compile</scope>
+                </dependency>
+                
+                <dependency>
+                        <groupId>xml-apis</groupId>
+                        <artifactId>xml-apis</artifactId>
+                        <version>1.4.01</version>
+                        <type>jar</type>
+                        <scope>compile</scope>
+                </dependency>
 	  
       <dependency>
           <groupId>org.apache.velocity</groupId>
