--- a/elda-assets/pom.xml
+++ b/elda-assets/pom.xml
@@ -20,7 +20,16 @@
 
   <build>
     <finalName>elda-assets</finalName>
-	<plugins>
+
+    <plugins>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>
+        </configuration>
+      </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
