--- a/elda-bundled/pom.xml
+++ b/elda-bundled/pom.xml
@@ -1,6 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
@@ -12,32 +14,30 @@
   <packaging>war</packaging>
   <name>elda-bundled</name>
   <version>1.2.34-SNAPSHOT</version>
-  <description>single WAR with assets and external configuration</description>
+  <description>single WAR with assets and external
+  configuration</description>
 
   <dependencies>
 
-	                  <dependency>
-                        <groupId>xalan</groupId>
-                        <artifactId>xalan</artifactId>
-                        <version>2.7.1</version>
-                        <type>jar</type>
-                        <scope>compile</scope>
-                </dependency>
-                
-                <dependency>
-                        <groupId>xml-apis</groupId>
-                        <artifactId>xml-apis</artifactId>
-                        <version>1.4.01</version>
-                        <type>jar</type>
-                        <scope>compile</scope>
-                </dependency>
-	  
-      <dependency>
-          <groupId>org.apache.velocity</groupId>
-          <artifactId>velocity</artifactId>
-          <version>1.7</version>
-		  <scope>compile</scope>
-      </dependency>
+    <dependency>
+      <groupId>net.sf.saxon</groupId>
+      <artifactId>Saxon-HE</artifactId>
+      <version>9.5.1-5</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.sourceforge.saxon</groupId>
+      <artifactId>saxon</artifactId>
+      <version>9.1.0.8</version>
+      <classifier>s9api</classifier>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity</artifactId>
+      <version>1.7</version>
+      <scope>compile</scope>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
@@ -46,64 +46,59 @@
     </dependency>
 
     <dependency>
-    	<groupId>com.epimorphics.lda</groupId>
-		<artifactId>elda-assets</artifactId>
-		<type>war</type>
-    	<version>${project.version}</version>
-    </dependency>
-  
-    <dependency>
-    	<groupId>com.epimorphics.lda</groupId>
-		<artifactId>elda-common</artifactId>
-		<type>war</type>
-    	<version>${project.version}</version>
+      <groupId>com.epimorphics.lda</groupId>
+      <artifactId>elda-assets</artifactId>
+      <type>war</type>
+      <version>${project.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.epimorphics.lda</groupId>
+      <artifactId>elda-common</artifactId>
+      <type>war</type>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
     <finalName>elda-bundled</finalName>
-	<plugins>
+    <plugins>
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <version>6.1.25</version>
+        <configuration>
+          <contextPath>/elda-bundled</contextPath>
+        </configuration>
+      </plugin>
 
-		<plugin>
-			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>maven-jetty-plugin</artifactId>
-	    		<version>6.1.25</version>
-			<configuration>
-			<contextPath>/elda-bundled</contextPath>
-			</configuration>
-		</plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <overlays>
+            <overlay>
+              <groupId>com.epimorphics.lda</groupId>
+              <artifactId>elda-common</artifactId>
+            </overlay>
+            <overlay>
+              <groupId>com.epimorphics.lda</groupId>
+              <artifactId>elda-assets</artifactId>
+            </overlay>
+          </overlays>
+        </configuration>
+      </plugin>
 
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-war-plugin</artifactId>
-			<version>2.3</version>
-			<configuration>
-				<overlays>
-
-					<overlay>
-						<groupId>com.epimorphics.lda</groupId>
-						<artifactId>elda-common</artifactId>
-					</overlay>
-
-					<overlay>
-						<groupId>com.epimorphics.lda</groupId>
-						<artifactId>elda-assets</artifactId>
-					</overlay>
-
-				</overlays>
-			</configuration>
-		</plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.6</version>
-          <configuration>
-              <skip>false</skip>
-          </configuration>
-        </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
     </plugins>
-  </build>
 
+  </build>
 </project>
