--- a/elda-common/pom.xml
+++ b/elda-common/pom.xml
@@ -1,18 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.34-SNAPSHOT</version>
+    <version>1.2.34</version>
   </parent>
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-common</artifactId>
   <packaging>war</packaging>
   <name>elda-common</name>
-  <version>1.2.34-SNAPSHOT</version>
+  <version>1.2.34</version>
   <description>single WAR with external configuration</description>
 
   <dependencies>
