--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -99,6 +99,11 @@
       <artifactId>lib</artifactId>
       <version>0.0.19</version>
     </dependency>
+    <dependency>
+      <groupId>org.jmock</groupId>
+      <artifactId>jmock-legacy</artifactId>
+      <version>2.6.0</version>
+    </dependency>
   </dependencies>
 
   <build>
