(incompletely) revised code for basic auth configuration. Same basic principle, but auth files are loaded from the standard path(set) in AuthMap.USUAL_AUTH_PATHS which can be over-ridden in the config using elda:authFile on the SPARQL endpoint.

--- a/elda-common/src/main/webapp/log4j.properties
+++ b/elda-common/src/main/webapp/log4j.properties
@@ -1,4 +1,5 @@
 log4j.rootLogger=INFO, stderr
+log4j.logger.org.apache.http.wire=INFO
 
 # Set up logging to include a file record of the output
 # Note: the file is always created, even if there is 
