--- a/elda-lda/src/main/java/log4j.properties
+++ b/elda-lda/src/main/java/log4j.properties
@@ -1,5 +1,8 @@
 log4j.rootLogger=WARN, stderr
 
+# suppress verbose wire protocol debugging
+log4j.logger.org.apache.http.wire=INFO
+
 # Set up logging to include a file record of the output
 # Note: the file is always created, even if there is 
 # no actual output.
