--- a/elda-standalone/src/main/webapp/log4j.properties
+++ b/elda-standalone/src/main/webapp/log4j.properties
@@ -1,4 +1,5 @@
 log4j.rootLogger=INFO, stderr
+log4j.logger.org.apache.http.wire=INFO
 
 # Set up logging to include a file record of the output
 # Note: the file is always created, even if there is 
