--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -17,79 +18,101 @@
   <dependencies>
 
 
-      <dependency>
-        <groupId>org.mortbay.jetty</groupId>
-        <artifactId>jetty</artifactId>
-        <version>6.1.16</version>
-      </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>jetty</artifactId>
+      <version>6.1.16</version>
+    </dependency>
 
 
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
       <artifactId>elda-lda</artifactId>
       <version>${project.version}</version>
-  </dependency>
+    </dependency>
+
+    <dependency>
+      <groupId>com.epimorphics.lda</groupId>
+      <artifactId>elda-assets</artifactId>
+      <version>${project.version}</version>
+      <type>war</type>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.2</version>
     </dependency>
-  
+
   </dependencies>
 
   <build>
     <finalName>elda-standalone</finalName>
     <plugins>
-        <plugin>
-            <artifactId>maven-jetty-plugin</artifactId>
-	    <groupId>org.mortbay.jetty</groupId>
-	    <version>6.1.25</version>
-        </plugin>  
-        
-        <!--  assemble the final jar file -->
-        <plugin>
-	        <!-- NOTE: We don't need a groupId specification because the group is
-	             org.apache.maven.plugins ...which is assumed by default.
-	         -->
-	        <artifactId>maven-assembly-plugin</artifactId>
-	        <version>2.2.1</version>
-			<configuration>
+      <plugin>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <groupId>org.mortbay.jetty</groupId>
+        <version>6.1.25</version>
+      </plugin>
 
-	            <descriptors>
-	                <descriptor>src/assemble/distribution.xml</descriptor>
-	            </descriptors>
-				
-				<finalName>elda-standalone-${project.version}</finalName>
-				
-				<appendAssemblyId>false</appendAssemblyId>
-				
-				<archive>
-	                <manifestEntries>
-                        <Main-Class>cmd.run</Main-Class>
-                    </manifestEntries>
-				</archive>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <overlays>
+            <overlay>
+              <groupId>com.epimorphics.lda</groupId>
+              <artifactId>elda-assets</artifactId>
+              <targetPath>assets</targetPath>
+            </overlay>
+          </overlays>
+        </configuration>
+      </plugin>
 
-	        </configuration>
-			
-			<executions>
-	            <execution>
-	                <phase>package</phase>
-	                <goals>
-	                    <goal>single</goal>
-	                </goals>
-	            </execution>
-	        </executions>
-        </plugin>
-        
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.6</version>
-          <configuration>
-              <skip>false</skip>
-          </configuration>
-        </plugin>
+
+      <!-- assemble the final jar file -->
+      <plugin>
+        <!-- NOTE: We don't need a groupId specification because the group is org.apache.maven.plugins ...which is assumed
+          by default. -->
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2.1</version>
+        <configuration>
+
+          <descriptors>
+            <descriptor>src/assemble/distribution.xml</descriptor>
+          </descriptors>
+
+          <finalName>elda-standalone-${project.version}</finalName>
+
+          <appendAssemblyId>false</appendAssemblyId>
+
+          <archive>
+            <manifestEntries>
+              <Main-Class>cmd.run</Main-Class>
+            </manifestEntries>
+          </archive>
+
+        </configuration>
+
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
