--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -18,11 +18,26 @@
   <dependencies>
 
 
+    <!-- - ->
     <dependency>
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>jetty</artifactId>
       <version>6.1.16</version>
     </dependency>
+    <!- - -->
+
+    <!-- -->
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>9.2.1.v20140609</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-webapp</artifactId>
+      <version>9.2.1.v20140609</version>
+    </dependency>
+    <!-- -->
 
 
     <dependency>
@@ -49,11 +64,27 @@
   <build>
     <finalName>elda-standalone</finalName>
     <plugins>
+      <!-- - ->
       <plugin>
         <artifactId>maven-jetty-plugin</artifactId>
         <groupId>org.mortbay.jetty</groupId>
         <version>6.1.25</version>
       </plugin>
+      <!- - -->
+
+      <!--  -->
+      <plugin>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <groupId>org.eclipse.jetty</groupId>
+        <version>9.2.1.v20140609</version>
+        <configuration>
+          <scanIntervalSeconds>2</scanIntervalSeconds>
+          <webApp>
+            <contextPath>/elda-standalone</contextPath>
+          </webApp>
+        </configuration>
+      </plugin>
+      <!--  -->
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
