Workable state for rapid development: symlink assets to elda-standalone

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ target/
 elda-standalone/meta-graph.ttl
 elda-standalone/object-graph.ttl
 elda-standalone/velocity.log
+elda-standalone/src/main/webapp/assets
