--- a/elda-standalone/src/main/webapp/log4j.properties
+++ b/elda-standalone/src/main/webapp/log4j.properties
@@ -1,5 +1,7 @@
 log4j.rootLogger=DEBUG, stderr
 log4j.logger.org.apache.http.wire=INFO
+log4j.logger.org.eclipse.jetty=INFO
+
 
 # Set up logging to include a file record of the output
 # Note: the file is always created, even if there is
