Added skeleton of page navigation bar

--- a/elda-standalone/src/main/webapp/log4j.properties
+++ b/elda-standalone/src/main/webapp/log4j.properties
@@ -1,6 +1,7 @@
 log4j.rootLogger=DEBUG, stderr
 log4j.logger.org.apache.http.wire=INFO
 log4j.logger.org.eclipse.jetty=INFO
+log4j.logger.com.hp.hpl.jena.shared=INFO
 
 
 # Set up logging to include a file record of the output
