--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ elda-standalone/meta-graph.ttl
 elda-standalone/object-graph.ttl
 elda-standalone/velocity.log
 elda-standalone/src/main/webapp/assets
+elda-standalone/velocity.log*
