--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,7 @@
             , velocity::specs/hello-velocity.ttl
             , velocitydev::specs/hello-velocity-dev.ttl
             , ved::specs/mini-education-velocity.ttl
+            , bwq::specs/environment.data.gov.uk-bwq.ttl
         </param-value>
   </context-param>
 
