Attempting to supress generation of velocity.log file by default

--- a/elda-assets/src/main/webapp/velocity/velocity.properties
+++ b/elda-assets/src/main/webapp/velocity/velocity.properties
@@ -9,3 +9,6 @@
 # If you want no Velocity properties set, set any irrelevant property,
 # eg, elda.novelocityproperties=true
 #
+
+# No logging
+runtime.log.logsystem.class=org.apache.velocity.runtime.log.NullLogChute
