--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -47,7 +47,7 @@
   <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-core</artifactId>
-      <version>1.12</version>
+      <version>${ver.jersey}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -55,13 +55,13 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-servlet</artifactId>
-      <version>1.12</version>
+      <version>${ver.jersey}</version>
     </dependency>
 
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-server</artifactId>
-      <version>1.12</version>
+      <version>${ver.jersey}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -69,7 +69,7 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-json</artifactId>
-      <version>1.12</version>
+      <version>${ver.jersey}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
