--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
     <ver.junit>4.11</ver.junit>
     <ver.log4j>1.2.17</ver.log4j>
     <ver.lucene>4.6.1</ver.lucene>
-    <ver.servlet-api>2.5</ver.servlet-api>
+	<ver.jersey>1.18.2</ver.jersey>
+    <ver.servlet-api>3.0-alpha-1</ver.servlet-api>
     <ver.slf4j>1.7.6</ver.slf4j>
     <ver.velocity>1.7</ver.velocity>
     <ver.wagon>1.0-beta-2</ver.wagon>
     <ver.xmlunit>1.4</ver.xmlunit>
-
     <jdk.version>1.7</jdk.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
