Set log to INFO. Removed mentions of page-shall.vm (mostly from comments). Tweaked hello-again-world to know where the velocity assets are (although it's asking for the non-existant-anyway page-shell.vm).

--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -57,7 +57,7 @@
             </goals>
             <phase>package</phase>
             <configuration>
-              <path>standalone</path>
+					<path>/standalone</path>
             </configuration>
           </execution>
         </executions>
