--- a/elda-standalone/src/main/webapp/log4j.properties
+++ b/elda-standalone/src/main/webapp/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, stderr
+log4j.rootLogger=INFO, stderr
 log4j.logger.org.apache.http.wire=INFO
 log4j.logger.org.eclipse.jetty=INFO
 log4j.logger.com.hp.hpl.jena.shared=INFO
