Fixing velocity paths.

--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,8 @@
   <context-param>
      <param-name>com.epimorphics.api.initialSpecFile</param-name>
      <param-value>
-			 <!-- hello::specs/hello-world.ttl
-			 , --> again::specs/hello-again-world.ttl <!--
+			hello::specs/hello-world.ttl
+		 	, again::specs/hello-again-world.ttl 
             , tiny::specs/tiny-education.ttl
             , mini::specs/mini-education.ttl
             , full::specs/full-education.ttl
@@ -18,7 +18,6 @@
             , velocitydev::specs/hello-velocity-dev.ttl
             , ved::specs/mini-education-velocity.ttl
 			, bwq::specs/environment.data.gov.uk-bwq.ttl
-			-->
         </param-value>
   </context-param>
 
