--- a/elda-common/src/main/webapp/log4j.properties
+++ b/elda-common/src/main/webapp/log4j.properties
@@ -13,14 +13,14 @@ log4j.logger.org.apache.http.wire=INFO
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %5p [%t] (%F:%L) - %m%n
 
 # Log format to standard error
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.target=System.err
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
-log4j.appender.stderr.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+log4j.appender.stderr.layout.ConversionPattern=%d{ISO8601} %5p [%t] (%F:%L) - %m%n
 
 # File based log output
 log4j.appender.R=org.apache.log4j.RollingFileAppender
@@ -29,4 +29,4 @@ log4j.appender.R.MaxFileSize=5000KB
 # Keep one backup file
 log4j.appender.R.MaxBackupIndex=1
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
+log4j.appender.R.layout.ConversionPattern=%d{ISO8601} %p %t %c - %m%n
