Changes to Elda's error reporting. In general Elda throws a limited variety of exceptions through RouterRestlet, expecting them to me managed by the container within which it sits. Specifically we design for Tomcat and have error-page declarations in the web.xml which map these exceptions to some default text with no details (hence not leaking details to a possible attacker).
Tomcat allows those default pages to be overridden by setting Context's
in the conf directories, allowing the error dsiaplyas to be styled as
appropriate to the application.

--- a/elda-common/src/main/webapp/WEB-INF/web.xml
+++ b/elda-common/src/main/webapp/WEB-INF/web.xml
@@ -74,6 +74,26 @@
     <error-code>404</error-code>
     <location>/_errors/404.html</location>
   </error-page>
+  
+  <error-page>
+    <exception-type>com.epimorphics.lda.exceptions.BadRequestException</exception-type>
+    <location>/_errors/400.html</location>
+  </error-page>
+  
+  <error-page>
+    <exception-type>com.epimorphics.lda.exceptions.VelocityRenderingException</exception-type>
+    <location>/_errors/500.html</location>
+  </error-page>
+  
+  <error-page>
+    <exception-type>com.epimorphics.lda.exceptions.QueryParseException</exception-type>
+    <location>/_errors/500.html</location>
+  </error-page>
+  
+  <error-page>
+    <exception-type>com.epimorphics.lda.exceptions.GeneralException</exception-type>
+    <location>/_errors/something.html</location>
+  </error-page>
 
   <!-- ==================================================================== -->
 
