MatchTemplate replaced use of Couple<String,Integer> with a class VarGroupIndex which serves the same job of mapping from a pattern variable to the index of its group in the matching RE. Also renamed params to be more explicit. This is heading to address issue #32.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ elda-standalone/object-graph.ttl
 elda-standalone/velocity.log
 elda-standalone/src/main/webapp/assets
 elda-standalone/velocity.log*
+
+_site
+.sass-cache
