--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -19,14 +19,16 @@
       <artifactId>tomcat-embed-core</artifactId>
       <version>7.0.42</version>
       <scope>provided</scope>
-    </dependency>
+	</dependency>
+
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-logging-log4j</artifactId>
       <version>7.0.42</version>
       <scope>provided</scope>
     </dependency>
-    <dependency>
+	
+	<dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-jasper</artifactId>
       <version>7.0.42</version>
@@ -36,32 +38,27 @@
 	    <dependency>
 		       <groupId>com.sun.jersey.contribs</groupId>
 		        <artifactId>jersey-multipart</artifactId>
-		        <version>1.17</version>
-	    </dependency>
+		        <version>${ver.jersey}</version>
+		</dependency>
+
 	    <dependency>
 	        <groupId>commons-beanutils</groupId>
 	        <artifactId>commons-beanutils</artifactId>
 	        <version>1.8.3</version>
-	    </dependency>
+	</dependency>
+
 	   <dependency>
 	      <groupId>com.sun.jersey</groupId>
 	      <artifactId>jersey-client</artifactId>
-	      <version>1.17</version>
-	   </dependency>
-																														    <dependency>
+	      <version>${ver.jersey}</version>
+  </dependency>
+
+	    <dependency>
 	     <groupId>com.sun.jersey.contribs</groupId>
 	     <artifactId>jersey-apache-client</artifactId>
-	     <version>1.17</version>
+	     <version>${ver.jersey}</version>
 	     <scope>test</scope>
 	   </dependency>
-
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
-      <type>jar</type>
-      <scope>compile</scope>
-    </dependency>
 
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
