--- a/elda-testing-webapp/src/test/webapp/log4j.properties
+++ b/elda-testing-webapp/src/test/webapp/log4j.properties
@@ -3,6 +3,10 @@ log4j.logger.org.apache.http.wire=INFO
 log4j.logger.org.eclipse.jetty=INFO
 log4j.logger.com.hp.hpl.jena.shared=INFO
 
+log4j.logger.org.apache.catalina=WARN
+log4j.logger.org.apache.tomcat=WARN
+
+
 
 # Set up logging to include a file record of the output
 # Note: the file is always created, even if there is
